refactor : position 클래스로 분리, 전략 패턴 적용